kubernetes/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  selector:
    app: helloworld
  type: ClusterIP
  ports:
  - name: helloworld
    protocol: TCP
    port: 8080
    targetPort: 8080
---
